test/files/neg/t9398.check
match.scala:4: warning: match may not be exhaustive.
It would fail on the following input: CC(B2)
  def test(c: CC): Unit = c match {
                          ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
